--- a/index.html
+++ b/index.html
@@ -1311,26 +1311,6 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://gcc.gnu.org/">GCC</a></td>
     </tr>
     <tr>
-        <td class="package">gcc-cloog</td>
-        <td class="website"><a href="http://www.cloog.org/">CLooG for GCC</a></td>
-    </tr>
-    <tr>
-        <td class="package">gcc-gmp</td>
-        <td class="website"><a href="http://www.gmplib.org/">GMP for GCC</a></td>
-    </tr>
-    <tr>
-        <td class="package">gcc-isl</td>
-        <td class="website"><a href="http://isl.gforge.inria.fr/">ISL for GCC</a></td>
-    </tr>
-    <tr>
-        <td class="package">gcc-mpc</td>
-        <td class="website"><a href="http://www.multiprecision.org/">MPC for GCC</a></td>
-    </tr>
-    <tr>
-        <td class="package">gcc-mpfr</td>
-        <td class="website"><a href="http://www.mpfr.org/">MPFR for GCC</a></td>
-    </tr>
-    <tr>
         <td class="package">gd</td>
         <td class="website"><a href="http://www.libgd.org/">GD  (without support for xpm)</a></td>
     </tr>
@@ -1833,6 +1813,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
     <tr>
         <td class="package">muparser</td>
         <td class="website"><a href="http://muparser.sourceforge.net/">muParser</a></td>
+    </tr>
+    <tr>
+        <td class="package">mxe-conf</td>
+        <td class="website"><a href="http://mxe.cc/">MXE</a></td>
     </tr>
     <tr>
         <td class="package">mxml</td>
