add MinGW 4 trunk build (mingw-org-wsl) and remove mingwrt/w32api packages

--- a/index.html
+++ b/index.html
@@ -1840,16 +1840,16 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://sourceforge.net/projects/mdbtools/">mdbtools</a></td>
     </tr>
     <tr>
+        <td class="package">mingw-org-wsl</td>
+        <td class="website"><a href="http://www.mingw.org/">MinGW Windows System Libraries</a></td>
+    </tr>
+    <tr>
         <td class="package">mingw-utils</td>
         <td class="website"><a href="http://www.mingw.org/">MinGW Utilities</a></td>
     </tr>
     <tr>
         <td class="package">mingw-w64</td>
         <td class="website"><a href="http://mingw-w64.sourceforge.net/">MinGW-w64 Runtime</a></td>
-    </tr>
-    <tr>
-        <td class="package">mingwrt</td>
-        <td class="website"><a href="http://www.mingw.org/">MinGW Runtime</a></td>
     </tr>
     <tr>
         <td class="package">mpc</td>
@@ -2350,10 +2350,6 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
     <tr>
         <td class="package">vtk6</td>
         <td class="website"><a href="http://www.vtk.org/">VTK6</a></td>
-    </tr>
-    <tr>
-        <td class="package">w32api</td>
-        <td class="website"><a href="http://www.mingw.org/">MinGW Windows API</a></td>
     </tr>
     <tr>
         <td class="package">wavpack</td>
