add MinGW 4 trunk build (mingw-org-wsl)

--- a/index.html
+++ b/index.html
@@ -1807,6 +1807,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://sourceforge.net/projects/mdbtools/">mdbtools</a></td>
     </tr>
     <tr>
+        <td class="package">mingw-org-wsl</td>
+        <td class="website"><a href="http://www.mingw.org/">MinGW Windows System Libraries</a></td>
+    </tr>
+    <tr>
         <td class="package">mingw-utils</td>
         <td class="website"><a href="http://www.mingw.org/">MinGW Utilities</a></td>
     </tr>
