Added package NLopt

--- a/index.html
+++ b/index.html
@@ -1888,6 +1888,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://www.lysator.liu.se/~nisse/nettle/">nettle</a></td>
     </tr>
     <tr>
+        <td class="package">nlopt</td>
+        <td class="website"><a href="http://ab-initio.mit.edu/wiki/index.php/NLopt">NLopt</a></td>
+    </tr>
+    <tr>
         <td class="package">nsis</td>
         <td class="website"><a href="http://nsis.sourceforge.net/">NSIS</a></td>
     </tr>
